# Wine-App-Manager

./: CMakeLists.txt  FINAL_STATUS.md  INSTALL_DEPENDENCIES.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  check_dependencies.sh  fix_and_run_gui.sh  install_gui_deps.sh  run_gui.sh  test_gui_fix.sh  wait_and_install.sh  wine-gui-launcher.sh  wine_app_manager.cpp  wine_cli.cpp  wine_executor.cpp  wine_gui.py  wine_gui_main.py  wine_gui_simple.py  wine_gui_window.py  wine_utils.cpp  wine_wrapper.cpp  wine_wrapper.hpp  wine_wrapper_impl.cpp
